# social_network

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
api/: .env.example  Makefile  conftest.py  manage.py  pyproject.toml
api/social_network/: asgi.py  loggers.py  urls.py  wsgi.py
api/social_network/apps/accounts/: admin.py  apps.py
api/social_network/apps/accounts/api/: authentication.py  extensions.py  middlewares.py  mixins.py  permissions.py  urls.py
api/social_network/apps/accounts/api/serializers/: activity.py  login.py  password.py  registration.py  user_profile.py
api/social_network/apps/accounts/api/views/: activity.py  login.py  password.py  registration.py  user_profile.py
api/social_network/apps/accounts/migrations/: 0001_initial.py
api/social_network/apps/accounts/models/: user.py
api/social_network/apps/accounts/services/: login.py  password.py
api/social_network/apps/accounts/tests/: test_api_permissions.py
api/social_network/apps/accounts/tests/test_api/: test_login_api.py  test_logout_api.py  test_registration_api.py
api/social_network/apps/accounts/tests/test_models/: test_user_model.py
api/social_network/apps/accounts/tests/test_serializers/: test_change_password_serializer.py  test_confirm_reset_password_serializer.py  test_login_serializer.py  test_registration_serializer.py  test_reset_password_serializer.py
api/social_network/apps/accounts/tests/test_services/: test_login_service.py  test_password_service.py
api/social_network/apps/commons/: apps.py
api/social_network/apps/commons/api/: serializers.py
api/social_network/apps/commons/models/: core.py
api/social_network/apps/posts/: admin.py  exceptions.py
api/social_network/apps/posts/api/: mixins.py  permissions.py  urls.py
api/social_network/apps/posts/api/filters/: analytic.py
api/social_network/apps/posts/api/serializers/: analytic.py  like.py  post.py
api/social_network/apps/posts/api/views/: analytic.py  post.py
api/social_network/apps/posts/migrations/: 0001_initial.py
api/social_network/apps/posts/models/: __init__.py  post.py
api/social_network/apps/posts/services/: like.py
api/social_network/fixtures/: __init__.py  user.py
api/social_network/settings/: __init__.py  django.py  social_network.py
api/social_network/settings/contrib/: __init__.py  rest_framework.py  swagger.py
api/sources/: config.json  main.py
docker/: docker-compose.yml
docker/images/api/files/: entrypoint.sh
docs/: architecture_overview.md  commands.md  docker.md  pre_commit_hook.md
